app/src/main/java/fail/toepic/retrofit_rx_test/LoadTime/Model/Time.kt
package fail.toepic.retrofit_rx_test.LoadTime.Model

data class TimeInfo(val time:Long)